context menu fixes... along with some more animations
context menu now always tries to fit itself on screen vertically, and if
it can't manage it, scrollbars via css can handle it

--- a/css/vectron.css
+++ b/css/vectron.css
@@ -379,4 +379,6 @@ body.noscroll {
 #contextMenu {
   position: absolute;
   display:none;
+  max-height: 100vh;
+  overflow-y: auto;
 }
